# miniio

include/: miniio.h
nccc/: CMakeLists.txt  nccc_miniio.c  stub_miniio.cmake
src/: miniio_localnetstub.c  miniio_posix.c  miniio_stub.c  miniio_uv.c
